[package]
name = "maldon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.2.0"
clap = { version = "4.3.11", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
